fix: Fix layout shifting shadcn ui select component

--- a/app/globals.css
+++ b/app/globals.css
@@ -117,6 +117,11 @@
   * {
     @apply border-border outline-ring/50;
   }
+
+  html {
+    @apply scroll-smooth;
+    @apply overflow-x-hidden
+  }
   body {
     @apply bg-background text-foreground;
   }
